# cap-link-notifier

./: .env.example  Cargo.toml  Dockerfile  README.md  Taskfile.yml  docker-compose.notifier.yml
.github/workflows/: docker-publish.yml
src/: main.rs
